--- a/outlineViewCoreData/MainWindowController.xib
+++ b/outlineViewCoreData/MainWindowController.xib
@@ -114,6 +114,20 @@
                                                                 <binding destination="9nR-xS-3S7" name="value" keyPath="objectValue.color" id="VdJ-l9-Lhl"/>
                                                             </connections>
                                                         </colorWell>
+                                                        <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="whp-ua-fv7">
+                                                            <rect key="frame" x="145" y="-6" width="100" height="22"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" state="on" id="cfn-Af-jTL">
+                                                                <numberFormatter key="formatter" formatterBehavior="default10_4" numberStyle="currency" minimumIntegerDigits="1" maximumIntegerDigits="2000000000" minimumFractionDigits="2" maximumFractionDigits="2" id="22M-Hn-6UZ"/>
+                                                                <font key="font" metaFont="system"/>
+                                                                <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                            </textFieldCell>
+                                                            <connections>
+                                                                <binding destination="9nR-xS-3S7" name="textColor" keyPath="objectValue.color" id="9dh-zK-l3I"/>
+                                                                <binding destination="9nR-xS-3S7" name="value" keyPath="objectValue.total" id="BF6-sV-9ti"/>
+                                                            </connections>
+                                                        </textField>
                                                     </subviews>
                                                     <constraints>
                                                         <constraint firstItem="wQs-Z7-7n4" firstAttribute="top" secondItem="9nR-xS-3S7" secondAttribute="top" constant="-3" id="9oI-UG-XCs"/>
@@ -127,6 +141,7 @@
                                                     <connections>
                                                         <outlet property="colorWell" destination="wQs-Z7-7n4" id="QMH-Wu-s4b"/>
                                                         <outlet property="textField" destination="Ku3-tS-UVN" id="pk6-0H-btu"/>
+                                                        <outlet property="total" destination="whp-ua-fv7" id="0Gg-sO-ifZ"/>
                                                     </connections>
                                                 </tableCellView>
                                                 <tableCellView identifier="dataCell" id="zpZ-QB-35y" customClass="KSTableCellView2" customModule="THOutlineViewCoreData" customModuleProvider="target">
